--- a/OkosamaV2.vbproj
+++ b/OkosamaV2.vbproj
@@ -108,10 +108,10 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
-    <Compile Include="zidouhyou.Designer.vb">
-      <DependentUpon>zidouhyou.vb</DependentUpon>
+    <Compile Include="ChildInfoAdd.Designer.vb">
+      <DependentUpon>ChildInfoAdd.vb</DependentUpon>
     </Compile>
-    <Compile Include="zidouhyou.vb">
+    <Compile Include="ChildInfoAdd.vb">
       <SubType>Form</SubType>
     </Compile>
   </ItemGroup>
@@ -131,8 +131,8 @@
       <CustomToolNamespace>My.Resources</CustomToolNamespace>
       <SubType>Designer</SubType>
     </EmbeddedResource>
-    <EmbeddedResource Include="zidouhyou.resx">
-      <DependentUpon>zidouhyou.vb</DependentUpon>
+    <EmbeddedResource Include="ChildInfoAdd.resx">
+      <DependentUpon>ChildInfoAdd.vb</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
